# master-I

./: .gitignore  README.md  go.mod  go.sum  raspored.txt
Računarstvo u oblaku/Računske Vežbe/Čas1/: z1.py  z2.py  z4.py  z5.py
asvsp/projekat/: .env  Opis projekta.txt  docker-compose.yml  download_dataset.sh  pokretanje.md
asvsp/projekat/FAOSTAT/: Dataset.txt  combine.py
asvsp/projekat/batch-dataset/: download_dataset.sh  load.sh  read_file.py
asvsp/projekat/batch-processing/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py
asvsp/projekat/docker-spark/: hadoop.env
asvsp/projekat/dokumentacija/: ASVSP Projekat.docx
asvsp/projekat/faostat/: dataset.txt  read_file.py
asvsp/projekat/kafka-producer/: Dockerfile  check-environment.sh  main.py
asvsp/projekat/realtime-processing/: 01.py  02.py  03.py  04.py  05.py
asvsp/racunske/05_kafka/: Dockerfile  kafka-install.sh  prepared_messages.txt
asvsp/resursi/: curated-zone.drawio  data-lake-arch.drawio  datalake-arch.drawio  raw-zone.drawio  transformation-zone.drawio
asvsp/scala/.metals/: metals.mv.db
asvsp/seminarski/: ASVSP - ELK Stack - Seminarski.pptx  ASVSP Seminarski - ELK stek.docx  E2-42-2022 - Stefan Aleksic - Elastic Stack - Prezentacija.pptx
asvsp/seminarski/ASVSP - Elastic Stack/: biblist.bib  main.tex  rsvp.sty
asvsp/seminarski/implementacija/: docker-compose.yml
asvsp/seminarski/resursi/: ELK stek.drawio  Elasticsearch-architecture.drawio  Impl-arch  Impl-arch.drawio  Logstash-pipeline.drawio
asvsp/seminarski_2021/E2332021_Kuzmanovic_Ognjen_Kubernetes/: E2-33-2021 - Prikaz funkcionalnosti Kubernetes alata na realnom primeru.docx  Prikaz funkcionalnosti Kubernetesa alata na realnom primeru.pptx
asvsp/seminarski_2021/E242021_Trifunovic_Petar_Trino/: Trino (1).docx  Trino.pptx
asvsp/seminarski_2021/R2202021_Perovic_Mitar_MLib/: Spark MLlib.pptx
asvsp/seminarski_2021/R2222021_Laketic_Milena_CQRS/: CQRS.pptx
cc/kolokvijum/v1/: Dockerfile
cc/projekat/: README.md  docker-compose.yml
cc/projekat/rest/: thunder-collection_UNS.json
cc/projekat/sservices/: Dockerfile
cc/projekat/uns-app/: .dockerignore  Dockerfile
cc/racunske/cas6/: primer-za-skladista.txt
hpc/priprema/1. paralelni_radnici/: res.c  zad.c
hpc/priprema/2. kreiranje_for_petlje/: main.c  res.c  smernice.md
hpc/priprema/3. paralelizacija_zavisnosti/: main.c  res.c  smernice.md
hpc/projekat/: bfs-dist-general.c  bfs-dist.py  bfs-par-general.c  bfs-par.c  bfs-par.py  bfs-seq.py  dfs.cpp  utils.cpp  utils.py
hpc/projekat/kod/: bfs-dist-general-1d.c  bfs-dist-general-2d.c
hpc/projekat/practice/: bfs-alg.py  bfs-dist.c  bfs-par.py  bfs-seq.py  utils.cpp  utils.py
hpc/projekat/testing/: dist-1d-avg.c  par-1d-avg.c  seq-avg.c
hpc/racunske/cas1/: linked.c  mandelbrot.c
hpc/racunske/cas2/2022/zadaci/bisection/: CMakeLists.txt  main.c
hpc/racunske/cas2/2022/zadaci/genetic_algorithm/: CMakeLists.txt  README.md  main.c
hpc/racunske/cas2/staro/matrix_multiplication/: CMakeLists.txt  README.md  main.c
hpc/racunske/cas2/staro/matrix_multiplication/utils/: h5_matrix_utils.c
hpc/racunske/cas3/: z2.c  z3.c  z4.c  z5.c  z6.c
hpc/racunske/cas4/staro/MatrixMultiplication/: CMakeLists.txt  README.md  main.c
hpc/racunske/cas4/staro/MatrixMultiplication/input_data/: m3x3.h5
hpc/racunske/cas4/staro/MatrixMultiplication/utils/: h5_matrix_utils.c  h5_matrix_utils.h
hpc/racunske/cas5/staro/zadaci/MatrixMultiplication/: CMakeLists.txt  README.md  main.c
hpc/racunske/cas5/staro/zadaci/MatrixMultiplication/input_data/: m5x5.h5
hpc/racunske/cas5/staro/zadaci/MatrixMultiplication/utils/: h5defs.h
output/: mecevi.txt  timovi-rangirani.txt  timovi.txt
pdaj/fun/dpp/: Cargo.toml
pdaj/fun/funfunctions/: Cargo.toml
pdaj/kolokvijum/condtional_variable/: Cargo.toml
pdaj/kolokvijum/sorted_list/: Cargo.toml
pdaj/racunske/cas1/: Cargo.toml
pdaj/racunske/cas2/: Cargo.toml  z0  z0.rs  z1  z1.rs  z2  z2.rs  z3  z3.rs  z4  z4.rs  z5  z5.rs  z6  z6.rs
pdaj/racunske/cas3/: Cargo.toml
pdaj/seminarski/: PDAJ Seminarski - WCF.docx  wcf.docx
pdaj/seminarski/MessagingClient/: App.config  Form1.Designer.cs  Form1.cs  FormJoinChat.Designer.cs  FormJoinChat.cs  FormLoggedUser.Designer.cs  FormLoggedUser.cs  FormLoggedUser.resx  MessagingClient.csproj  MessagingClient.sln  Program.cs
pdaj/seminarski/MessagingServerLib/: App.config  IMessageCallback.cs  IMessagingService.cs  MessagingServerLib.csproj  MessagingServerLib.sln  MessagingService.cs  packages.config
pdaj/seminarski/WcfServiceLibrary/: WcfServiceLibrary.csproj  WcfServiceLibrary.sln
pdasp/hyperledger-fabric/: 1  mreza.sh
rust-analyzer/: Cargo.toml
(+434 files in other folders)
